- Fixed roll override for psionic abilites - Added new styling for spell table to handle right alignement - Added powers up to telepathic sciences

--- a/ADnD_2E_Revised/2EStyle.css
+++ b/ADnD_2E_Revised/2EStyle.css
@@ -1524,6 +1524,22 @@ button {
 .sheet-rolltemplate-2Epsionic .sheet-spell-table.sheet-spell-left5 td:nth-child(5) {
     text-align: left;
 }
+.sheet-rolltemplate-2Espell .sheet-spell-table td.sheet-spell-right,
+.sheet-rolltemplate-2Espell .sheet-spell-table.sheet-spell-right td,
+.sheet-rolltemplate-2Espell .sheet-spell-table.sheet-spell-right1 td:nth-child(1),
+.sheet-rolltemplate-2Espell .sheet-spell-table.sheet-spell-right2 td:nth-child(2),
+.sheet-rolltemplate-2Espell .sheet-spell-table.sheet-spell-right3 td:nth-child(3),
+.sheet-rolltemplate-2Espell .sheet-spell-table.sheet-spell-right4 td:nth-child(4),
+.sheet-rolltemplate-2Espell .sheet-spell-table.sheet-spell-right5 td:nth-child(5),
+.sheet-rolltemplate-2Epsionic .sheet-spell-table td.sheet-spell-right,
+.sheet-rolltemplate-2Epsionic .sheet-spell-table.sheet-spell-right td,
+.sheet-rolltemplate-2Epsionic .sheet-spell-table.sheet-spell-right1 td:nth-child(1),
+.sheet-rolltemplate-2Epsionic .sheet-spell-table.sheet-spell-right2 td:nth-child(2),
+.sheet-rolltemplate-2Epsionic .sheet-spell-table.sheet-spell-right3 td:nth-child(3),
+.sheet-rolltemplate-2Epsionic .sheet-spell-table.sheet-spell-right4 td:nth-child(4),
+.sheet-rolltemplate-2Epsionic .sheet-spell-table.sheet-spell-right5 td:nth-child(5) {
+    text-align: right;
+}
 .sheet-rolltemplate-2Espell .sheet-spell-table td.sheet-spell-bottom,
 .sheet-rolltemplate-2Espell .sheet-spell-table.sheet-spell-bottom td,
 .sheet-rolltemplate-2Espell .sheet-spell-table.sheet-spell-bottom1 td:nth-child(1),
