--- a/ADnD_2E_Revised/sass/rolltemplates.scss
+++ b/ADnD_2E_Revised/sass/rolltemplates.scss
@@ -484,6 +484,16 @@
       text-align: left;
     }
 
+    td.sheet-spell-right,
+    &.sheet-spell-right td,
+    &.sheet-spell-right1 td:nth-child(1),
+    &.sheet-spell-right2 td:nth-child(2),
+    &.sheet-spell-right3 td:nth-child(3),
+    &.sheet-spell-right4 td:nth-child(4),
+    &.sheet-spell-right5 td:nth-child(5) {
+      text-align: right;
+    }
+
     td.sheet-spell-bottom,
     &.sheet-spell-bottom td,
     &.sheet-spell-bottom1 td:nth-child(1),
